unit test setup created with enzyme, mocha and chai

--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "mocha": "^8.0.1",
+    "chai": "^4.2.0"
   },
   "browserslist": {
     "production": [
