--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.25",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
