--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.25",
+    "node-fetch": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -22,6 +23,7 @@
     "react-scripts": "latest",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "fetch-mock": "^9.10.5",
     "mocha": "^8.0.1",
     "chai": "^4.2.0"
   },
